Java: fix warnings in HttpClient